<?xml version="1.0"?>
<package format="2">
  <name>libgeodesic</name>
  <version>0.1.0</version>
  <description>The Heat Method package</description>
  <maintainer email="chris.lewis@swri.org">Chris Lewis</maintainer>
  <license>Unknown</license>
  <author>Chris Lewis</author>

  <depend>suitesparse</depend>
  <depend>boost</depend>
  <depend>liblapack-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
